# updatenight-cli

./: Cargo.toml  README.md  package.json
.github/workflows/: release.yml
src/: api.rs  auth.rs  config.rs  main.rs  tui.rs
