[package]
name = "un"
version = "0.1.0"
edition = "2021"
description = "Update Night CLI — browse AI dev tools from your terminal"
license = "MIT"

[[bin]]
name = "un"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
open = "5"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
